--- a/apps/backend-response-v4/tsconfig.json
+++ b/apps/backend-response-v4/tsconfig.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "node",
-    "outDir": "./dist/src",
+    "outDir": "./dist",
   }
 }
