--- a/apps/backend-response-processor-v4/package.json
+++ b/apps/backend-response-processor-v4/package.json
@@ -3,10 +3,9 @@
   "name": "@klicker-uzh/backend-response-processor-v4",
   "version": "3.0.0-alpha.82",
   "license": "AGPL-3.0",
-  "main": "dist/src/functions/*.js",
+  "main": "dist/index.js",
   "files": [
-    "dist/src",
-    "dist/src/functions"
+    "dist/"
   ],
   "scripts": {
     "build": "cross-env NODE_ENV=production tsc",
@@ -14,7 +13,7 @@
     "prestart": "npm run clean && npm run build",
     "dev": "npm-run-all --parallel dev:ts dev:func",
     "dev:ts": "tsc -w",
-    "dev:func": "func start -p 7073",
+    "dev:func": "func start -p 7073 --verbose",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "func start -p 7073",
