--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -56,7 +56,8 @@
     "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
     "seed:mockExamPoints": "ENV=production doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/parseMockExamPoints.ts",
     "size": "size-limit",
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "import": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/importV2Data.ts"
   },
   "prisma": {
     "seed": "npm run seed"
