fix(deploy): ensure name of push cronjob is shorter than 52 char

--- a/deploy/charts/klicker-uzh-v2/templates/cron-daily-push-notifications-check.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cron-daily-push-notifications-check.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ include "chart.fullname" . }}-cron-push-notifications
+  name: {{ include "chart.fullname" . }}-cron-push
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
