fix(deploy): add the cron token to the backend configmap

--- a/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
@@ -10,6 +10,7 @@ data:
   NOTIFICATION_URL: {{ .Values.backendGraphql.notifications.url | quote }}
   NOTIFICATION_SUPPORT_EMAIL: {{ .Values.backendGraphql.notifications.supportEmail | quote }}
   COOKIE_DOMAIN: {{ .Values.backendGraphql.cookieDomain | quote }}
+  CRON_TOKEN: {{ .Values.cron.token | quote }}
   REDIS_CACHE_HOST: {{ .Values.backendGraphql.redisCache.host | quote }}
   REDIS_CACHE_PORT: {{ .Values.backendGraphql.redisCache.port | quote }}
   {{- if .Values.backendGraphql.redisCache.tls }}
