--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -25,7 +25,7 @@
     "@klicker-uzh/markdown": "^3.0.0-alpha.0",
     "@klicker-uzh/prisma": "^3.0.0-alpha.0",
     "@socialgouv/matomo-next": "1.6.1",
-    "@uzh-bf/design-system": "1.8.0",
+    "@uzh-bf/design-system": "2.0.0",
     "d3": "7.8.4",
     "dayjs": "1.11.7",
     "deepmerge": "4.3.1",
@@ -40,6 +40,7 @@
     "next-intl": "2.14.6",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
+    "prettier-plugin-tailwindcss": "0.3.0",
     "ramda": "0.29.0",
     "react": "18.2.0",
     "react-d3-speedometer": "2.1.0-rc.0",
