chore: setup updated

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "prepare": "husky install",
     "prisma:setup": "npm run -w packages/prisma prisma:setup",
     "prisma:migrate": "npm run -w packages/prisma prisma:migrate",
-    "prisma:reset": "npm run -w packages/prisma prisma:reset"
+    "prisma:reset": "npm run -w packages/prisma prisma:reset",
+    "prisma:studio": "npm run -w packages/prisma prisma:studio"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.10.6",
