--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/office-addin",
-  "version": "3.0.0-alpha.84",
+  "version": "3.0.0-beta.0",
   "license": "AGPL-3.0",
   "config": {
     "app_to_debug": "powerpoint",
