--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/markdown",
-  "version": "3.0.0-alpha.84",
+  "version": "3.0.0-beta.0",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "type": "module",
