--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -94,7 +94,8 @@
     "uuidv4": "6.2.13"
   },
   "dependencies": {
-    "@prisma/client": "4.14.1"
+    "@prisma/client": "4.14.1",
+    "mongoose": "7.3.3"
   },
   "volta": {
     "extends": "../../package.json"
