--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -76,6 +76,7 @@
     "cssnano": "6.0.1",
     "eslint-config-next": "13.4.3",
     "postcss": "8.4.23",
+    "postcss-import": "15.1.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
     "prettier-plugin-tailwindcss": "0.3.0",
