--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@klicker-uzh/monorepo",
   "description": "KlickerUZH instant-class-response system.",
-  "version": "1.8.9",
+  "version": "1.8.10",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -55,8 +55,7 @@
     "yaml": "1.10.2"
   },
   "volta": {
-    "node": "16.14.2",
-    "npm": "8.5.0"
+    "node": "16.20.1"
   },
   "packageManager": "npm@8.5.0"
 }
