--- a/docs/package.json
+++ b/docs/package.json
@@ -4,29 +4,29 @@
   "version": "3.0.0-beta.1",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.18",
-    "@docusaurus/module-type-aliases": "2.0.0-beta.18",
-    "@docusaurus/plugin-client-redirects": "2.0.0-beta.18",
-    "@docusaurus/plugin-ideal-image": "2.0.0-beta.18",
-    "@docusaurus/preset-classic": "2.0.0-beta.18",
-    "@docusaurus/theme-common": "2.0.0-beta.18",
+    "@docusaurus/core": "2.4.1",
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "@docusaurus/plugin-client-redirects": "2.4.1",
+    "@docusaurus/plugin-ideal-image": "2.4.1",
+    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/theme-common": "2.4.1",
     "@gabrielcsapo/docusaurus-plugin-matomo": "0.1.2",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
-    "@tsconfig/docusaurus": "1.0.5",
-    "@uzh-bf/design-system": "2.0.0",
-    "autoprefixer": "10.4.8",
+    "@tsconfig/docusaurus": "2.0.0",
+    "@uzh-bf/design-system": "2.0.2",
+    "autoprefixer": "10.4.14",
     "cross-env": "7.0.3",
-    "nodemon": "2.0.15",
+    "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.16",
+    "postcss": "8.4.26",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-medium-image-zoom": "4.3.6",
-    "recharts": "2.1.9",
-    "tailwind-merge": "1.12.0",
-    "tailwindcss": "3.1.8",
-    "typescript": "5.0.4"
+    "react-medium-image-zoom": "5.1.6",
+    "recharts": "2.7.2",
+    "tailwind-merge": "1.13.2",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   },
   "scripts": {
     "build": "docusaurus build",
