--- a/docs/package.json
+++ b/docs/package.json
@@ -20,6 +20,8 @@
     "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.26",
+    "prettier-plugin-organize-imports": "3.2.3",
+    "prettier-plugin-tailwindcss": "0.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-medium-image-zoom": "5.1.6",
