--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "include": ["src", "types"],
   "compilerOptions": {
-    "jsx": "react"
+    "jsx": "react",
+    "esModuleInterop": true
   }
 }
