upgrade to 3.0.0 alpha for react 18 support

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,16 +4,16 @@
   "version": "3.0.0-beta.1",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/module-type-aliases": "2.4.1",
-    "@docusaurus/plugin-client-redirects": "2.4.1",
-    "@docusaurus/plugin-ideal-image": "2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
-    "@docusaurus/theme-common": "2.4.1",
+    "@docusaurus/core": "3.0.0-alpha.0",
+    "@docusaurus/module-type-aliases": "3.0.0-alpha.0",
+    "@docusaurus/plugin-client-redirects": "3.0.0-alpha.0",
+    "@docusaurus/plugin-ideal-image": "3.0.0-alpha.0",
+    "@docusaurus/preset-classic": "3.0.0-alpha.0",
+    "@docusaurus/theme-common": "3.0.0-alpha.0",
+    "@docusaurus/tsconfig": "*",
     "@gabrielcsapo/docusaurus-plugin-matomo": "0.1.2",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
-    "@tsconfig/docusaurus": "2.0.0",
     "@uzh-bf/design-system": "2.0.2",
     "autoprefixer": "10.4.14",
     "cross-env": "7.0.3",
@@ -22,8 +22,8 @@
     "postcss": "8.4.26",
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-medium-image-zoom": "5.1.6",
     "recharts": "2.7.2",
     "tailwind-merge": "1.13.2",
