--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,8 +1,4 @@
 {
-  "extends": "@tsconfig/docusaurus/tsconfig.json",
-  "include": ["src", "types"],
-  "compilerOptions": {
-    "jsx": "react",
-    "esModuleInterop": true
-  }
+  "extends": "@docusaurus/tsconfig",
+  "include": ["src", "types"]
 }
