--- a/docs/package.json
+++ b/docs/package.json
@@ -20,6 +20,7 @@
     "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.26",
+    "prettier": "3.0.0",
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.4.1",
     "react": "18.2.0",
