--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@docusaurus/tsconfig",
-  "include": ["src", "types"]
+  "include": ["src", "types"],
+  "compilerOptions": {
+    "baseUrl": "."
+  }
 }
