--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "@tsconfig/docusaurus/tsconfig.json",
+  "extends": "@docusaurus/tsconfig",
   "include": ["src", "types"],
   "compilerOptions": {
-    "jsx": "react"
+    "baseUrl": "."
   }
 }
