--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -20,9 +20,6 @@
     "start:test": "nyc --silent npm start",
     "check": "tsc --noEmit"
   },
-  "engines": {
-    "node": "=18"
-  },
   "size-limit": [
     {
       "path": "dist/index.js",
@@ -30,7 +27,7 @@
     }
   ],
   "devDependencies": {
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node20": "^20.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
@@ -38,47 +35,50 @@
     "@types/ioredis-mock": "^8.2.1",
     "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.0.0",
+    "@types/node": "^20.0.0",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
-    "@uzh-bf/design-system": "2.0.2",
+    "@uzh-bf/design-system": "2.0.4",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
+    "dotenv": "16.3.1",
     "husky": "8.0.3",
     "ioredis-mock": "8.7.0",
     "jest": "29.5.0",
     "nodemon": "2.0.22",
     "npm-run-all": "4.1.5",
-    "prisma": "4.14.1",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "prisma": "5.0.0",
+    "tsup": "7.1.0",
+    "typescript": "5.1.6"
   },
   "dependencies": {
-    "@envelop/response-cache-redis": "2.0.8",
-    "@envelop/sentry": "5.1.1",
-    "@escape.tech/graphql-armor": "1.7.3",
-    "@graphql-yoga/plugin-csrf-prevention": "1.5.1",
-    "@graphql-yoga/plugin-persisted-operations": "1.9.1",
-    "@graphql-yoga/plugin-response-cache": "1.9.1",
-    "@graphql-yoga/redis-event-target": "1.0.0",
+    "@envelop/response-cache-redis": "3.1.0",
+    "@envelop/sentry": "6.0.0",
+    "@escape.tech/graphql-armor": "2.2.0",
+    "@graphql-yoga/plugin-csrf-prevention": "2.0.3",
+    "@graphql-yoga/plugin-persisted-operations": "2.0.3",
+    "@graphql-yoga/plugin-response-cache": "2.1.0",
+    "@graphql-yoga/redis-event-target": "2.0.0",
     "@klicker-uzh/graphql": "^3.0.0-alpha.0",
     "@klicker-uzh/prisma": "^3.0.0-alpha.0",
-    "@sentry/node": "7.52.1",
-    "@sentry/tracing": "7.52.1",
+    "@sentry/node": "7.59.3",
+    "@sentry/tracing": "7.59.3",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "express": "4.18.2",
-    "graphql": "16.6.0",
-    "graphql-ws": "5.13.1",
-    "graphql-yoga": "3.9.1",
+    "graphql": "16.7.1",
+    "graphql-ws": "5.14.0",
+    "graphql-yoga": "4.0.3",
     "ioredis": "5.3.2",
-    "jsonwebtoken": "9.0.0",
+    "jsonwebtoken": "9.0.1",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "ws": "8.13.0"
   },
   "volta": {
     "extends": "../../package.json"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
