--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -23,31 +23,31 @@
     "@klicker-uzh/grading": "^3.0.0-alpha.0",
     "@sentry/node": "7.52.1",
     "ioredis": "5.3.2",
-    "jsonwebtoken": "9.0.0",
+    "jsonwebtoken": "9.0.1",
     "md5": "2.3.0",
     "ramda": "0.29.0"
   },
   "devDependencies": {
     "@azure/functions": "3.5.1",
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node20": "^20.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/md5": "2.3.2",
-    "@types/node": "^18.0.0",
+    "@types/node": "^20.0.0",
     "@types/ramda": "^0.29.0",
-    "@uzh-bf/design-system": "2.0.2",
+    "@uzh-bf/design-system": "2.0.4",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
+    "dotenv": "16.3.1",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
     "ts-node": "10.9.1",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.1.0",
+    "typescript": "5.1.6"
   },
   "volta": {
     "extends": "../../package.json"
   },
   "engines": {
-    "node": "=18"
+    "node": ">=18"
   }
 }
