--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -22,26 +22,26 @@
   "dependencies": {
     "@azure/service-bus": "7.9.0",
     "@sentry/node": "7.52.1",
-    "jsonwebtoken": "9.0.0"
+    "jsonwebtoken": "9.0.1"
   },
   "devDependencies": {
     "@azure/functions": "3.5.1",
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node20": "^20.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.0.0",
-    "@uzh-bf/design-system": "2.0.2",
+    "@types/node": "^20.0.0",
+    "@uzh-bf/design-system": "2.0.4",
     "cross-env": "7.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
     "ts-node": "10.9.1",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.1.0",
+    "typescript": "5.1.6"
   },
   "volta": {
     "extends": "../../package.json"
   },
   "engines": {
-    "node": "=18"
+    "node": ">=18"
   }
 }
