--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -8,7 +8,7 @@
     "dev_server_port": 3000
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "package": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
@@ -34,10 +34,10 @@
   },
   "dependencies": {
     "@fluentui/react": "8.109.5",
-    "@uzh-bf/design-system": "2.0.2",
+    "@uzh-bf/design-system": "2.0.4",
     "core-js": "3.30.2",
     "es6-promise": "4.2.8",
-    "formik": "2.2.9",
+    "formik": "2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.11"
@@ -46,9 +46,9 @@
     "@babel/core": "7.21.8",
     "@babel/preset-typescript": "7.21.5",
     "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
-    "@types/node": "^18.11.18",
+    "@types/node": "^20.0.0",
     "@types/office-js": "^1.0.256",
     "@types/office-runtime": "^1.0.23",
     "@types/react": "^18.0.0",
@@ -74,18 +74,18 @@
     "office-addin-manifest": "1.12.4",
     "office-addin-prettier-config": "1.2.0",
     "os-browserify": "0.3.0",
-    "postcss": "8.4.23",
+    "postcss": "8.4.26",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "process": "0.11.10",
     "source-map-loader": "4.0.1",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "ts-loader": "9.4.2",
-    "typescript": "5.0.4",
+    "typescript": "5.1.6",
     "webpack": "5.83.1",
-    "webpack-cli": "5.1.1",
-    "webpack-dev-server": "4.15.0"
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1"
   },
   "prettier": "office-addin-prettier-config",
   "browserslist": [
