--- a/package.json
+++ b/package.json
@@ -60,27 +60,27 @@
     "prisma:reset": "npm run -w packages/prisma prisma:reset"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.10.6",
+    "@cypress/code-coverage": "3.11.0",
     "@testing-library/cypress": "9.0.0",
     "azure-functions-core-tools": "4.0.5198",
-    "cypress": "12.12.0",
+    "cypress": "12.17.2",
     "husky": "8.0.3",
     "nyc": "15.1.0",
     "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-organize-imports": "3.2.3",
     "standard-version": "9.5.0",
-    "turbo": "1.9.8",
-    "yaml": "2.3.0"
+    "turbo": "1.10.9",
+    "yaml": "2.3.1"
   },
   "dependencies": {
-    "@prisma/client": "4.14.1",
-    "prisma": "4.14.1"
+    "@prisma/client": "5.0.0",
+    "prisma": "5.0.0"
   },
   "volta": {
-    "node": "18.16.0"
+    "node": "20.4.0"
   },
-  "packageManager": "npm@8.19.3",
+  "packageManager": "npm@9.7.2",
   "engines": {
-    "node": "=18"
+    "node": ">=18"
   }
 }
