--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -18,7 +18,7 @@
     "check": "tsc --noEmit"
   },
   "engines": {
-    "node": "=18"
+    "node": ">=18"
   },
   "size-limit": [
     {
@@ -28,15 +28,15 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node20": "^20.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jest": "^29.0.2",
     "@types/ramda": "^0.29.0",
     "jest": "29.5.0",
-    "size-limit": "8.2.4",
+    "size-limit": "8.2.6",
     "ts-jest": "29.1.0",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.1.0",
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "ramda": "0.29.0"
