--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -24,7 +24,7 @@
     "check": "tsc --noEmit"
   },
   "engines": {
-    "node": "=18"
+    "node": ">=18"
   },
   "size-limit": [
     {
@@ -43,13 +43,13 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node20": "^20.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "npm-run-all": "4.1.5",
-    "size-limit": "8.2.4",
-    "tailwindcss": "3.3.2",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "size-limit": "8.2.6",
+    "tailwindcss": "3.3.3",
+    "tsup": "7.1.0",
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "rehype-external-links": "2.1.0",
