--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -51,6 +51,7 @@
     "seed:prod:bf2": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF2.ts",
     "seed:prod:ami": "npm run seed:qa:ami",
     "seed:prod:achievements": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
+    "seed:prod:summerSchool": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedSummerSchool.ts",
     "seed:prod:user": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedUser.ts",
     "seed:prod:levels": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedLevels.ts",
     "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
