--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -42,9 +42,12 @@
     "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node20": "^20.0.0",
+    "@size-limit/preset-small-lib": "8.2.6",
+    "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/node": "^20.4.4",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "npm-run-all": "4.1.5",
     "size-limit": "8.2.6",
     "tailwindcss": "3.3.3",
