--- a/packages/markdown/tsconfig.json
+++ b/packages/markdown/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
+  "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "jsx": "react"
+    "jsx": "react",
+    "moduleResolution": "node"
   }
 }
