--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -31,6 +31,7 @@
     "cross-env": "7.0.3",
     "dayjs": "1.11.7",
     "deepmerge": "4.3.1",
+    "formik": "2.4.2",
     "graphql": "16.6.0",
     "graphql-ws": "5.13.1",
     "jsonwebtoken": "9.0.0",
