--- a/.github/workflows/code-review-gpt.yml
+++ b/.github/workflows/code-review-gpt.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install code-review-gpt
 
       - name: Run code review script
-        run: npx code-review-gpt review --ci --model gpt-3.5
+        run: npx code-review-gpt review --ci --model gpt-3.5-turbo-16k
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE_SHA: ${{ github.event.pull_request.base.sha }}
