debug links adjusted

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,28 +5,28 @@
       "name": "Launch Chrome (frontend-control)",
       "request": "launch",
       "type": "chrome",
-      "url": "http://127.0.0.1:3003",
+      "url": "http://control.klicker.local",
       "webRoot": "${workspaceFolder}/apps/frontend-control",
     },
     {
       "name": "Launch Chrome (frontend-manage)",
       "request": "launch",
       "type": "chrome",
-      "url": "http://127.0.0.1:3002",
+      "url": "http://manage.klicker.local",
       "webRoot": "${workspaceFolder}/apps/frontend-manage",
     },
     {
       "name": "Launch Chrome (frontend-pwa)",
       "request": "launch",
       "type": "chrome",
-      "url": "http://127.0.0.1:3001",
+      "url": "http://pwa.klicker.local",
       "webRoot": "${workspaceFolder}/apps/frontend-pwa",
     },
     {
       "name": "Launch Chrome (office-addin)",
       "request": "launch",
       "type": "chrome",
-      "url": "http://127.0.0.1:3000",
+      "url": "http://office.klicker.local",
       "webRoot": "${workspaceFolder}/apps/office-addin",
     },
     {
