--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -2,7 +2,7 @@
   "name": "@klicker-uzh/auth",
   "version": "3.0.0-beta.4",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3010",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
