--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -20,6 +20,7 @@
     "migrate:learningElements": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
     "migrate:learningElements:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
     "prisma:migrate": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma",
+    "prisma:migrate:create": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma --create-only",
     "prisma:deploy:raw": "prisma migrate deploy --schema=src/prisma/schema.prisma",
     "prisma:deploy": "doppler run --config dev -- npm run prisma:deploy:raw",
     "prisma:deploy:qa": "doppler run --config stg -- npm run prisma:deploy:raw",
