--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -22,6 +22,8 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "1.0.1",
+    "@klicker-uzh/prisma": "*",
     "@uzh-bf/design-system": "2.0.5",
     "next": "13.4.12",
     "next-auth": "4.22.3",
@@ -29,5 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shared-components": "*"
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
