--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.12",
     "postcss": "8.4.27",
     "postcss-import": "15.1.0",
+    "prisma": "4.14.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
