--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -23,9 +23,10 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "1.0.1",
-    "@klicker-uzh/prisma": "*",
+    "@klicker-uzh/prisma": "^3.0.0-alpha.0",
+    "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "2.0.5",
+    "bcryptjs": "2.4.3",
     "next": "13.4.12",
     "next-auth": "4.22.3",
     "nookies": "2.5.2",
