--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -27,6 +27,7 @@
     "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "2.0.5",
     "bcryptjs": "2.4.3",
+    "jsonwebtoken": "9.0.1",
     "next": "13.4.12",
     "next-auth": "4.22.3",
     "nookies": "2.5.2",
