--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -74,6 +74,7 @@
     "graphql-yoga": "3.9.1",
     "ioredis": "5.3.2",
     "jsonwebtoken": "9.0.0",
+    "next-auth": "4.22.3",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "ws": "8.13.0"
