--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -1,4 +1,5 @@
 NEXTAUTH_URL=http://auth.klicker.local
 EDUID_CLIENT_ID=uzh_klicker_auth_dev
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
-EDUID_ID=eduid-test
+NEXT_PUBLIC_EDUID_ID=eduid-test
+NEXT_PUBLIC_DEFAULT_REDIRECT=http://manage.klicker.local
