--- a/apps/frontend-manage/.env.development
+++ b/apps/frontend-manage/.env.development
@@ -10,3 +10,4 @@ NEXT_PUBLIC_API_URL_SSR=http://127.0.0.1:3000/api/graphql
 NEXT_PUBLIC_PWA_URL="http://pwa.klicker.local"
 NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.local"
 NEXT_PUBLIC_CONTROL_URL="http://control.klicker.local"
+NEXT_PUBLIC_AUTH_URL="http://auth.klicker.local"
