--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -27,6 +27,7 @@
     "@klicker-uzh/prisma": "^3.0.0-alpha.0",
     "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "2.0.5",
+    "bcrypt": "5.1.0",
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.1",
     "next": "13.4.12",
