--- a/apps/frontend-manage/.env.test
+++ b/apps/frontend-manage/.env.test
@@ -10,4 +10,4 @@ NEXT_PUBLIC_API_URL_SSR=$NEXT_PUBLIC_API_URL
 NEXT_PUBLIC_PWA_URL="http://127.0.0.1:3001"
 NEXT_PUBLIC_MANAGE_URL="http://127.0.0.1:3002"
 NEXT_PUBLIC_CONTROL_URL="http://127.0.0.1:3003"
-NEXT_PUBLIC_AUTH_URL="http://auth.klicker.local"
+NEXT_PUBLIC_AUTH_URL="http://127.0.0.1:3010"
