--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: ['v3']
   pull_request:
-    branches: ["v3"]
+    branches: ['v3']
     types: [opened, synchronize, reopened]
   # workflow_dispatch:
 
@@ -136,7 +136,6 @@ jobs:
   #         tags: ${{ env.REGISTRY }}/${{ github.repository }}/frontend-pwa:cypress
   #         labels: ${{ steps.meta.outputs.labels }}
 
-
   cypress-run:
     # needs:
     #   - build-backend
@@ -203,7 +202,6 @@ jobs:
       #   ports:
       #     - 3000:3000
 
-
     runs-on: ubuntu-latest
     # strategy:
     #   fail-fast: false # https://github.com/cypress-io/github-action/issues/48
@@ -262,12 +260,12 @@ jobs:
         with:
           install: false
           start: npm run start:test
-          wait-on: 'http://127.0.0.1:3000/api/graphql, http://127.0.0.1:3001, http://127.0.0.1:3002, http://127.0.0.1:3003'
+          wait-on: 'http://127.0.0.1:3000/api/graphql, http://127.0.0.1:3001, http://127.0.0.1:3002, http://127.0.0.1:3003, http://127.0.0.1:3010'
           wait-on-timeout: 120
           record: true
           browser: chrome
         env:
-          INITIAL_PASSWORD: "abcd"
+          APP_SECRET: abcd
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_ENV: production
