add cookie domain on auth app

--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -1,3 +1,4 @@
+COOKIE_DOMAIN=klicker.local
 NEXTAUTH_URL=http://auth.klicker.local
 EDUID_CLIENT_ID=uzh_klicker_auth_dev
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
