--- a/apps/auth/.env.test
+++ b/apps/auth/.env.test
@@ -1,6 +1,8 @@
+COOKIE_DOMAIN=127.0.0.1
 NEXTAUTH_URL=http://127.0.0.1:3010
 EDUID_CLIENT_ID=uzh_klicker_auth_dev
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid-test
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://127.0.0.1:3002
 DATABASE_URL=postgres://klicker:klicker@localhost:5432/main
+APP_SECRET=abcd
