--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -8,7 +8,7 @@
     "dev_server_port": 3000
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "package": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
