--- a/package.json
+++ b/package.json
@@ -69,12 +69,14 @@
     "nyc": "15.1.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-tailwindcss": "0.3.0",
     "standard-version": "9.5.0",
     "turbo": "1.9.8",
     "yaml": "2.3.0"
   },
   "dependencies": {
     "@prisma/client": "4.16.0",
+    "axios": "1.4.0",
     "code-review-gpt": "0.0.26",
     "prisma": "4.16.0"
   },
