--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -31,6 +31,7 @@
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jest": "^29.0.2",
+    "@types/node": "^18.17.3",
     "@types/ramda": "^0.29.0",
     "jest": "29.5.0",
     "size-limit": "8.2.4",
