--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -32,6 +32,7 @@
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/node": "^18.17.3",
     "size-limit": "8.2.4",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
