--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -45,6 +45,7 @@
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/node": "^18.17.3",
     "npm-run-all": "4.1.5",
     "size-limit": "8.2.4",
     "tailwindcss": "3.3.2",
