--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "4.16.0",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
