--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -12,9 +12,11 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
     "cross-env": "7.0.3",
     "cssnano": "6.0.1",
@@ -30,7 +32,6 @@
     "@klicker-uzh/prisma": "*",
     "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "2.0.5",
-    "bcrypt": "5.1.0",
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.1",
     "next": "13.4.12",
@@ -38,7 +39,7 @@
     "nookies": "2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "shared-components": "*"
+    "shared-components": "workspace:*"
   },
   "volta": {
     "extends": "../../package.json"
