--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "prettier-plugin-organize-imports": "3.2.2",
     "prettier-plugin-tailwindcss": "0.3.0",
     "standard-version": "9.5.0",
-    "turbo": "1.9.8",
+    "turbo": "1.10.12",
     "yaml": "2.3.0"
   },
   "dependencies": {
@@ -84,7 +84,7 @@
     "node": "18.17.0",
     "pnpm": "8.6.12"
   },
-  "packageManager": "npm@9.6.7",
+  "packageManager": "pnpm@8.6.12",
   "engines": {
     "node": "=18"
   }
