--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -46,16 +46,15 @@
     "@graphql-codegen/typescript-operations": "3.0.4",
     "@graphql-codegen/typescript-resolvers": "3.2.1",
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
-    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^29.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/mathjs": "9.4.2",
     "@types/node": "^18.17.3",
     "@types/node-schedule": "^2.1.0",
-    "@types/validator": "^13.7.5",
+    "@types/validator": "^13.9.0",
     "@types/web-push": "^3.3.2",
     "dotenv": "16.0.3",
     "graphql-codegen-persisted-query-ids": "0.1.2",
@@ -71,19 +70,22 @@
     "web-push": "3.6.1"
   },
   "dependencies": {
+    "@klicker-uzh/grading": "*",
+    "@klicker-uzh/prisma": "*",
     "@pothos/core": "3.30.0",
     "@pothos/plugin-prisma": "3.51.1",
     "@pothos/plugin-scope-auth": "3.19.2",
     "@pothos/plugin-validation": "3.9.1",
-    "@klicker-uzh/grading": "*",
-    "@klicker-uzh/prisma": "*",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.7",
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-scalars": "1.22.0",
+    "jsonwebtoken": "9.0.1",
     "mathjs": "11.8.0",
     "node-schedule": "2.1.1",
+    "ramda": "0.29.0",
+    "uuid": "9.0.0",
     "validator": "13.9.0",
     "zod": "3.21.4"
   },
