--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -46,6 +46,7 @@
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.17.3",
+    "@types/react": "^18.2.18",
     "npm-run-all": "4.1.5",
     "size-limit": "8.2.4",
     "tailwindcss": "3.3.2",
