--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@types/node": "^18.17.3",
+    "@types/react": "^18.2.18",
     "npm-run-all": "^4.1.5",
     "prettier-plugin-tailwindcss": "0.3.0",
     "tailwindcss": "^3.2.4"
