runs in dev mode

--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -38,7 +38,7 @@
     "graphql-ws": "5.13.1",
     "jsonwebtoken": "9.0.0",
     "localforage": "1.10.0",
-    "next": "13.4.12",
+    "next": "13.4.13",
     "next-intl": "2.14.6",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
@@ -47,7 +47,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "2.6.2",
-    "shared-components": "*",
+    "shared-components": "workspace:*",
     "sharp": "0.32.1",
     "tailwind-merge": "1.12.0",
     "yup": "1.1.1"
@@ -67,7 +67,7 @@
     "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.14",
     "cssnano": "6.0.1",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "13.4.13",
     "postcss": "8.4.23",
     "postcss-import": "15.1.0",
     "prettier": "2.8.8",
