--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -49,6 +49,7 @@
     "typescript": "5.0.4"
   },
   "dependencies": {
+    "@envelop/response-cache": "4.0.8",
     "@envelop/response-cache-redis": "2.0.8",
     "@envelop/sentry": "5.1.1",
     "@escape.tech/graphql-armor": "1.7.3",
@@ -63,7 +64,7 @@
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "express": "4.18.2",
-    "graphql": "16.6.0",
+    "graphql": "16.7.1",
     "graphql-ws": "5.13.1",
     "graphql-yoga": "3.9.1",
     "ioredis": "5.3.2",
