--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -36,7 +36,7 @@
     "js-search": "2.0.1",
     "localforage": "1.10.0",
     "lodash": "4.17.21",
-    "next": "13.4.12",
+    "next": "13.4.13",
     "next-intl": "2.14.6",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
@@ -51,7 +51,7 @@
     "react-tagcloud": "2.3.1",
     "recharts": "2.6.2",
     "remark-slate": "1.8.6",
-    "shared-components": "*",
+    "shared-components": "workspace:**",
     "sharp": "0.32.1",
     "slate": "0.94.1",
     "slate-history": "0.93.0",
@@ -74,7 +74,7 @@
     "@types/sharp": "^0.32.0",
     "autoprefixer": "10.4.14",
     "cssnano": "6.0.1",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "13.4.13",
     "postcss": "8.4.23",
     "postcss-import": "15.1.0",
     "prettier": "2.8.8",
