--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -9,14 +9,14 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "prebuild": "npm run generate",
-    "build": "NODE_ENV=production tsup --dts",
+    "generate": "graphql-codegen --config codegen.ts",
+    "build": "run-s generate build:ts",
+    "build:ts": "NODE_ENV=production tsup --dts",
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:ts": "NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch '**/**.graphql' --watch '**/**.ts'",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "generate": "graphql-codegen --config codegen.ts",
     "size": "size-limit",
     "check": "tsc --noEmit"
   },
@@ -37,21 +37,23 @@
     "graphql-yoga": "^3.6.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "3.3.1",
-    "@graphql-codegen/fragment-matcher": "4.0.1",
-    "@graphql-codegen/introspection": "3.0.1",
-    "@graphql-codegen/schema-ast": "3.0.1",
-    "@graphql-codegen/typed-document-node": "4.0.1",
-    "@graphql-codegen/typescript": "3.0.4",
-    "@graphql-codegen/typescript-operations": "3.0.4",
-    "@graphql-codegen/typescript-resolvers": "3.2.1",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/fragment-matcher": "5.0.0",
+    "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-codegen/schema-ast": "4.0.0",
+    "@graphql-codegen/typed-document-node": "5.0.1",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-operations": "4.0.1",
+    "@graphql-codegen/typescript-resolvers": "4.0.1",
+    "@graphql-typed-document-node/core": "3.2.0",
+    "@parcel/watcher": "2.2.0",
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
-    "@types/mathjs": "9.4.2",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^18.17.3",
     "@types/node-schedule": "^2.1.0",
     "@types/validator": "^13.9.0",
@@ -70,17 +72,17 @@
     "web-push": "3.6.1"
   },
   "dependencies": {
-    "@klicker-uzh/grading": "*",
-    "@klicker-uzh/prisma": "*",
-    "@pothos/core": "3.30.0",
-    "@pothos/plugin-prisma": "3.51.1",
-    "@pothos/plugin-scope-auth": "3.19.2",
-    "@pothos/plugin-validation": "3.9.1",
+    "@klicker-uzh/grading": "3.0.0-beta.4",
+    "@klicker-uzh/prisma": "3.0.0-beta.4",
+    "@pothos/core": "3.32.1",
+    "@pothos/plugin-prisma": "3.56.0",
+    "@pothos/plugin-scope-auth": "3.20.0",
+    "@pothos/plugin-validation": "3.9.2",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.7",
     "generate-password": "1.7.0",
-    "graphql": "16.6.0",
-    "graphql-scalars": "1.22.0",
+    "graphql": "16.7.1",
+    "graphql-scalars": "1.22.2",
     "jsonwebtoken": "9.0.1",
     "mathjs": "11.8.0",
     "node-schedule": "2.1.1",
