--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -9,8 +9,7 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "prebuild": "npm run generate",
-    "build": "npm-run-all build:ts build:copy",
+    "build": "run-s generate build:ts build:copy",
     "build:ts": "NODE_ENV=production tsup",
     "build:copy": "node src/copy.js",
     "build:watch": "NODE_ENV=development tsup --watch",
@@ -39,8 +38,7 @@
     "prisma:studio": "doppler run --config dev -- npm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- npm run prisma:studio:raw",
     "prisma:studio:prod": "doppler run --config prd -- npm run prisma:studio:raw",
-    "preseed": "npm run build",
-    "seed": "ENV=development doppler run --config dev -- npm-run-all seed:test",
+    "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
     "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
     "seed:achievements": "ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
     "seed:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
@@ -76,11 +74,11 @@
     "@mermaid-js/mermaid-cli": "10.1.0",
     "@pothos/plugin-prisma": "3.51.1",
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
     "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^18.13.0",
-    "@types/ramda": "^0.29.0",
+    "@types/node": "^18.17.3",
+    "@types/ramda": "^0.29.3",
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
