--- a/turbo.json
+++ b/turbo.json
@@ -22,12 +22,20 @@
     "dev": {
       "cache": false,
       "outputs": ["dist/**", ".next/**"],
-      "dependsOn": ["@klicker-uzh/prisma#build", "@klicker-uzh/markdown#build"]
+      "dependsOn": [
+        "@klicker-uzh/prisma#build",
+        "@klicker-uzh/graphql#build",
+        "@klicker-uzh/markdown#build"
+      ]
     },
     "dev:offline": {
       "cache": false,
       "outputs": ["dist/**", ".next/**"],
-      "dependsOn": ["@klicker-uzh/prisma#build", "@klicker-uzh/markdown#build"]
+      "dependsOn": [
+        "@klicker-uzh/prisma#build",
+        "@klicker-uzh/graphql#build",
+        "@klicker-uzh/markdown#build"
+      ]
     },
     "publish": {
       "cache": false,
