--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -29,7 +29,8 @@
     "typescript": "5.0.4"
   },
   "dependencies": {
-    "@klicker-uzh/prisma": "*",
+    "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/shared-components": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "2.0.5",
     "bcryptjs": "2.4.3",
@@ -38,8 +39,7 @@
     "next-auth": "4.22.3",
     "nookies": "2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "shared-components": "workspace:*"
+    "react-dom": "18.2.0"
   },
   "volta": {
     "extends": "../../package.json"
