--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -57,8 +57,8 @@
     "@graphql-yoga/plugin-persisted-operations": "1.9.1",
     "@graphql-yoga/plugin-response-cache": "1.9.1",
     "@graphql-yoga/redis-event-target": "1.0.0",
-    "@klicker-uzh/graphql": "*",
-    "@klicker-uzh/prisma": "*",
+    "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
     "@sentry/node": "7.52.1",
     "@sentry/tracing": "7.52.1",
     "cookie-parser": "1.4.6",
