--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -21,9 +21,10 @@
     "@fortawesome/free-regular-svg-icons": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@klicker-uzh/graphql": "*",
-    "@klicker-uzh/markdown": "*",
-    "@klicker-uzh/prisma": "*",
+    "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/markdown": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/shared-components": "workspace:*",
     "@sentry/nextjs": "7.52.1",
     "@socialgouv/matomo-next": "1.6.1",
     "@uzh-bf/design-system": "2.0.6",
@@ -37,13 +38,12 @@
     "jsonwebtoken": "9.0.0",
     "localforage": "1.10.0",
     "next": "13.4.13",
-    "next-intl": "2.14.6",
+    "next-intl": "2.19.1",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "ramda": "0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "shared-components": "workspace:*",
     "sharp": "0.32.1",
     "tailwind-merge": "1.12.0",
     "yup": "1.1.1"
@@ -53,14 +53,15 @@
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
     "@types/body-parser": "^1.19.2",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.0.0",
-    "@types/ramda": "^0.29.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.17.3",
+    "@types/ramda": "^0.29.3",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/sharp": "^0.32.0",
     "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.14",
+    "babel-loader": "8.2.5",
     "cssnano": "6.0.1",
     "eslint-config-next": "13.4.13",
     "postcss": "8.4.23",
