--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -21,9 +21,10 @@
     "@fortawesome/free-regular-svg-icons": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@klicker-uzh/graphql": "*",
-    "@klicker-uzh/markdown": "*",
-    "@klicker-uzh/prisma": "*",
+    "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/markdown": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/shared-components": "workspace:*",
     "@socialgouv/matomo-next": "1.6.1",
     "@uzh-bf/design-system": "2.0.6",
     "d3": "7.8.4",
@@ -37,7 +38,7 @@
     "localforage": "1.10.0",
     "lodash": "4.17.21",
     "next": "13.4.13",
-    "next-intl": "2.14.6",
+    "next-intl": "2.19.1",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "ramda": "0.29.0",
@@ -51,7 +52,6 @@
     "react-tagcloud": "2.3.1",
     "recharts": "2.6.2",
     "remark-slate": "1.8.6",
-    "shared-components": "workspace:**",
     "sharp": "0.32.1",
     "slate": "0.94.1",
     "slate-history": "0.93.0",
@@ -65,14 +65,15 @@
     "@tailwindcss/typography": "0.5.9",
     "@types/d3": "^7.4.0",
     "@types/js-search": "^1.4.0",
-    "@types/lodash": "^4.14.185",
-    "@types/node": "^18.0.0",
-    "@types/ramda": "^0.29.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/lodash": "^4.14.196",
+    "@types/node": "^18.17.3",
+    "@types/ramda": "^0.29.3",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/react-tagcloud": "^1.1.7",
     "@types/sharp": "^0.32.0",
     "autoprefixer": "10.4.14",
+    "babel-loader": "8.2.5",
     "cssnano": "6.0.1",
     "eslint-config-next": "13.4.13",
     "postcss": "8.4.23",
