--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -24,9 +24,10 @@
     "@fortawesome/free-regular-svg-icons": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@klicker-uzh/graphql": "*",
-    "@klicker-uzh/markdown": "*",
-    "@klicker-uzh/prisma": "*",
+    "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/markdown": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/shared-components": "workspace:*",
     "@radix-ui/react-tabs": "1.0.3",
     "@socialgouv/matomo-next": "1.6.1",
     "@uzh-bf/design-system": "2.0.6",
@@ -39,7 +40,7 @@
     "jsonwebtoken": "9.0.0",
     "localforage": "1.10.0",
     "next": "13.4.13",
-    "next-intl": "2.14.6",
+    "next-intl": "2.19.1",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "object-hash": "3.0.0",
@@ -47,7 +48,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "2.6.2",
-    "shared-components": "workspace:*",
     "sharp": "0.32.1",
     "tailwind-merge": "1.12.0",
     "yup": "1.1.1"
@@ -66,6 +66,7 @@
     "@types/sharp": "^0.32.0",
     "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.14",
+    "babel-loader": "8.2.5",
     "cssnano": "6.0.1",
     "eslint-config-next": "13.4.13",
     "postcss": "8.4.23",
