--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -72,8 +72,8 @@
     "web-push": "3.6.1"
   },
   "dependencies": {
-    "@klicker-uzh/grading": "3.0.0-beta.4",
-    "@klicker-uzh/prisma": "3.0.0-beta.4",
+    "@klicker-uzh/grading": "workspace:*",
+    "@klicker-uzh/prisma": "workspace:*",
     "@pothos/core": "3.32.1",
     "@pothos/plugin-prisma": "3.56.0",
     "@pothos/plugin-scope-auth": "3.20.0",
