--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shared-components",
+  "name": "@klicker-uzh/shared-components",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "private": true,
@@ -15,26 +15,28 @@
     "check": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@klicker-uzh/graphql": "*",
-    "@klicker-uzh/markdown": "*",
-    "@uzh-bf/design-system": "^2.0.0",
-    "dayjs": "^1.11.6",
-    "formik": "^2.2.9",
-    "is-hotkey": "^0.2.0",
-    "lodash": "^4.17.21",
-    "next-intl": "^2.10.4",
-    "ramda": "^0.29.0",
-    "react": "^18.2.0",
-    "recharts": "^2.4.1",
-    "slate": "^0.94.1",
-    "slate-history": "^0.93.0",
-    "slate-react": "^0.94.2",
-    "tailwind-merge": "^1.8.1",
-    "typescript": "^5.0.0",
-    "yup": "^1.0.0"
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/free-regular-svg-icons": "6.4.0",
+    "@fortawesome/free-solid-svg-icons": "6.4.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/markdown": "workspace:*",
+    "@uzh-bf/design-system": "2.0.6",
+    "dayjs": "1.11.7",
+    "formik": "2.4.2",
+    "is-hotkey": "0.2.0",
+    "lodash": "4.17.21",
+    "next": "13.4.13",
+    "next-intl": "2.19.1",
+    "ramda": "0.29.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "recharts": "2.6.2",
+    "slate": "0.94.1",
+    "slate-history": "0.93.0",
+    "slate-react": "0.94.2",
+    "tailwind-merge": "1.12.0",
+    "yup": "1.1.1"
   },
   "volta": {
     "extends": "../../package.json"
@@ -43,10 +45,13 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@tsconfig/node18": "^2.0.1",
+    "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.17.3",
     "@types/react": "^18.2.18",
     "npm-run-all": "^4.1.5",
     "prettier-plugin-tailwindcss": "0.3.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.0.4"
   }
 }
