--- a/.dockerignore
+++ b/.dockerignore
@@ -1,28 +1,12 @@
-*
+.**
 
-!apps/backend/src/
-!apps/backend/package.json
+__**
 
-!apps/frontend/src/
-!apps/frontend/public/
-!apps/frontend/compiled-lang/
-!apps/frontend/.babelrc
-!apps/frontend/tsconfig.json
-!apps/frontend/next.config.mjs
-!apps/frontend/next-env.d.ts
-!apps/frontend/postcss.config.js
-!apps/frontend/tailwind.config.js
-!apps/frontend/sentry.*.js
-!apps/frontend/package.json
-
-
-
-!packages/db
-
-!README.md
-!LICENSE.md
-
-!package.json
-!package-lock.json
-!turbo.json
-!devbox.json
+cypress/
+deploy/
+docs/
+legacy/
+newsletter/
+**/.next/
+**/node_modules/
+util/
