--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -1,58 +1,50 @@
-# Install dependencies only when needed
-FROM node:18-alpine AS deps
+FROM docker.io/library/node:18-alpine AS base
 
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+ARG NODE_ENV production
+ENV NODE_ENV $NODE_ENV
+
+FROM base AS builder
+WORKDIR /app
+
 RUN apk add --no-cache libc6-compat
+RUN apk update
 
-WORKDIR /app
+RUN npm i -g pnpm turbo
 
-COPY package.json ./
-
-RUN npm install
-
-
-# Rebuild the source code only when needed
-FROM node:18-alpine AS builder
-
-WORKDIR /app
-
-ARG NODE_ENV="production"
-ARG NEXTAUTH_URL
-ARG EDUID_CLIENT_ID
-ARG EDUID_WELL_KNOWN
-ARG NEXT_PUBLIC_EDUID_ID
-ARG NEXT_PUBLIC_DEFAULT_REDIRECT
-
-ENV NEXT_TELEMETRY_DISABLED 1
-
-COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-RUN npm run build
+RUN turbo prune --scope=@klicker-uzh/auth --docker
 
 
-# Production image, copy all the files and run next
-FROM node:18-alpine AS runner
-
+FROM base AS installer
 WORKDIR /app
 
-ARG NODE_ENV="production"
-ENV NEXT_TELEMETRY_DISABLED 1
+RUN apk add --no-cache libc6-compat
+RUN apk update
+
+RUN npm i -g pnpm turbo
+
+COPY --from=builder /app/out/json/ .
+COPY --from=builder /app/out/pnpm* .
+
+RUN pnpm i --frozen-lockfile
+
+COPY --from=builder /app/out/full/ .
+RUN pnpm run build --filter=@klicker-uzh/auth
+
+
+FROM base AS runner
+WORKDIR /app
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
-
-COPY --from=builder /app/public ./public
-
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
 USER nextjs
 
-EXPOSE 3000
+COPY --from=installer /app/apps/auth/next.config.js .
+COPY --from=installer /app/apps/auth/package.json .
 
-ENV PORT 3000
+COPY --from=installer --chown=nextjs:nodejs /app/apps/auth/.next/standalone ./
+COPY --from=installer --chown=nextjs:nodejs /app/apps/auth/.next/static ./apps/auth/.next/static
+COPY --from=installer --chown=nextjs:nodejs /app/apps/auth/public ./apps/auth/public
 
-CMD ["node", "server.js"]
+CMD node apps/auth/server.js
