--- a/apps/auth/.dockerignore
+++ b/apps/auth/.dockerignore
@@ -1,11 +1,8 @@
+.**
+__**
+**/.next/
+**/node_modules/
 Dockerfile
-.dockerignore
 node_modules/
 npm-debug.log
 README.md
-.next/
-.git/
-.vercel/
-.turbo/
-.env.local
-.env.local.template
