--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.29.0",
     "@uzh-bf/design-system": "2.0.6",
+    "azure-functions-core-tools": "4.0.5198",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "husky": "8.0.3",
