--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -31,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.0.0",
     "@uzh-bf/design-system": "2.0.6",
+    "azure-functions-core-tools": "4.0.5198",
     "cross-env": "7.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
