cypress commands with turbo

--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "release:beta:dry": "standard-version --dry-run --prerelease beta",
     "release:rc": "standard-version --prerelease rc --no-verify",
     "release:rc:dry": "standard-version --dry-run --prerelease rc",
-    "test": "cypress open",
-    "test:run": "cypress run",
+    "test": "turbo run test",
+    "test:run": "turbo run test:run",
     "start": "turbo run start",
     "start:test": "turbo run start:test",
     "prepare": "husky install",
