--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -17,7 +17,16 @@
   "volta": {
     "extends": "../../package.json"
   },
+  "peerDependencies": {
+    "@uzh-bf/design-system": "2.0.6",
+    "next": "13.4.13",
+    "next-intl": "2.19.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
+    "@klicker-uzh/markdown": "workspace:*",
+    "@klicker-uzh/graphql": "workspace:*",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
@@ -25,6 +34,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.17.3",
     "@types/react": "^18.2.18",
+    "formik": "2.4.2",
     "npm-run-all": "^4.1.5",
     "prettier-plugin-tailwindcss": "0.3.0",
     "tailwindcss": "^3.3.2",
